# RahulJat_IITGuwahati

./: LICENSE  README.md  app.py  data_schema.py  extract_info.py  extract_text.py  main.py  pyproject.toml  raw_ocr_output.txt
